--- a/T3_2.ipynb
+++ b/T3_2.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,34 @@
       "Epoch 11/25\n",
       "75/75 [==============================] - 41s 544ms/step - loss: 8.1664 - acc: 0.4917 - val_loss: 8.1112 - val_acc: 0.4965\n",
       "Epoch 12/25\n",
-      "32/75 [===========>..................] - ETA: 22s - loss: 7.9677 - acc: 0.5010"
+      "75/75 [==============================] - 42s 554ms/step - loss: 8.2310 - acc: 0.4846 - val_loss: 9.4199 - val_acc: 0.4137\n",
+      "Epoch 13/25\n",
+      "75/75 [==============================] - 43s 576ms/step - loss: 8.3474 - acc: 0.4800 - val_loss: 8.8330 - val_acc: 0.4507\n",
+      "Epoch 14/25\n",
+      "75/75 [==============================] - 43s 570ms/step - loss: 7.9687 - acc: 0.5025 - val_loss: 8.4527 - val_acc: 0.4718\n",
+      "Epoch 15/25\n",
+      "75/75 [==============================] - 42s 554ms/step - loss: 7.8491 - acc: 0.5108 - val_loss: 8.3656 - val_acc: 0.4774\n",
+      "Epoch 16/25\n",
+      "75/75 [==============================] - 42s 562ms/step - loss: 8.0416 - acc: 0.4996 - val_loss: 8.0346 - val_acc: 0.5000\n",
+      "Epoch 17/25\n",
+      "75/75 [==============================] - 42s 556ms/step - loss: 8.1722 - acc: 0.4904 - val_loss: 7.8194 - val_acc: 0.5106\n",
+      "Epoch 18/25\n",
+      "75/75 [==============================] - 42s 557ms/step - loss: 8.0245 - acc: 0.5000 - val_loss: 8.5716 - val_acc: 0.4648\n",
+      "Epoch 19/25\n",
+      "75/75 [==============================] - 43s 572ms/step - loss: 8.2522 - acc: 0.4867 - val_loss: 8.1726 - val_acc: 0.4930\n",
+      "Epoch 20/25\n",
+      "75/75 [==============================] - 42s 556ms/step - loss: 7.8357 - acc: 0.5129 - val_loss: 7.7750 - val_acc: 0.5158\n",
+      "Epoch 21/25\n",
+      "75/75 [==============================] - 40s 540ms/step - loss: 7.8593 - acc: 0.5117 - val_loss: 8.0414 - val_acc: 0.5000\n",
+      "Epoch 22/25\n",
+      "75/75 [==============================] - 43s 570ms/step - loss: 8.1332 - acc: 0.4929 - val_loss: 8.0954 - val_acc: 0.4965\n",
+      "Epoch 23/25\n",
+      "75/75 [==============================] - 42s 565ms/step - loss: 8.0882 - acc: 0.4975 - val_loss: 8.1001 - val_acc: 0.4947\n",
+      "Epoch 24/25\n",
+      "75/75 [==============================] - 40s 539ms/step - loss: 8.1946 - acc: 0.4908 - val_loss: 8.4901 - val_acc: 0.4701\n",
+      "Epoch 25/25\n",
+      "75/75 [==============================] - 42s 555ms/step - loss: 8.3772 - acc: 0.4792 - val_loss: 7.8620 - val_acc: 0.5106\n",
+      "Accuracy validation:  0.484375\n"
      ]
     }
    ],
@@ -148,7 +175,7 @@
     "        epochs=25,\n",
     "        validation_data=validation_generator,\n",
     "        validation_steps=len(validation_generator.classes)//validation_generator.batch_size)\n",
-    "print(\"Accuracy validation: \",model.evaluate_generator(generator=validation_generator,steps = 2)[1])"
+    "print(\"Accuracy validation: \",model.evaluate_generator(generator=validation_generator,steps = 2)[1])#probar algo distinto de 2"
    ]
   },
   {
@@ -160,9 +187,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d_1 (Conv2D)            (None, 150, 150, 32)      896       \n",
+      "_________________________________________________________________\n",
+      "conv2d_2 (Conv2D)            (None, 148, 148, 32)      9248      \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_1 (MaxPooling2 (None, 74, 74, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "dropout_5 (Dropout)          (None, 74, 74, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_3 (Conv2D)            (None, 74, 74, 64)        18496     \n",
+      "_________________________________________________________________\n",
+      "conv2d_4 (Conv2D)            (None, 72, 72, 64)        36928     \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_2 (MaxPooling2 (None, 36, 36, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "dropout_6 (Dropout)          (None, 36, 36, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "flatten_3 (Flatten)          (None, 82944)             0         \n",
+      "_________________________________________________________________\n",
+      "dense_7 (Dense)              (None, 128)               10616960  \n",
+      "_________________________________________________________________\n",
+      "dropout_7 (Dropout)          (None, 128)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_8 (Dense)              (None, 3)                 387       \n",
+      "=================================================================\n",
+      "Total params: 10,682,915\n",
+      "Trainable params: 10,682,915\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "Epoch 1/25\n",
+      "75/75 [==============================] - 297s 4s/step - loss: 1.2019 - acc: 0.3992 - val_loss: 1.0635 - val_acc: 0.4137\n",
+      "Epoch 2/25\n",
+      "75/75 [==============================] - 297s 4s/step - loss: 1.0396 - acc: 0.4763 - val_loss: 0.9774 - val_acc: 0.5616\n",
+      "Epoch 3/25\n",
+      "75/75 [==============================] - 300s 4s/step - loss: 0.9876 - acc: 0.5179 - val_loss: 1.0209 - val_acc: 0.4701\n",
+      "Epoch 4/25\n",
+      "75/75 [==============================] - 300s 4s/step - loss: 0.9628 - acc: 0.5542 - val_loss: 0.8901 - val_acc: 0.5810\n",
+      "Epoch 5/25\n",
+      "75/75 [==============================] - 297s 4s/step - loss: 0.9293 - acc: 0.5558 - val_loss: 0.9728 - val_acc: 0.5035\n",
+      "Epoch 6/25\n",
+      "75/75 [==============================] - 301s 4s/step - loss: 0.9078 - acc: 0.5733 - val_loss: 0.8989 - val_acc: 0.5827\n",
+      "Epoch 7/25\n",
+      "75/75 [==============================] - 302s 4s/step - loss: 0.8828 - acc: 0.5996 - val_loss: 0.8202 - val_acc: 0.6250\n",
+      "Epoch 8/25\n",
+      "75/75 [==============================] - 298s 4s/step - loss: 0.8486 - acc: 0.6225 - val_loss: 0.8432 - val_acc: 0.6197\n",
+      "Epoch 9/25\n",
+      "75/75 [==============================] - 298s 4s/step - loss: 0.8313 - acc: 0.6333 - val_loss: 0.8577 - val_acc: 0.6004\n",
+      "Epoch 10/25\n",
+      "75/75 [==============================] - 297s 4s/step - loss: 0.8033 - acc: 0.6417 - val_loss: 0.8980 - val_acc: 0.6074\n",
+      "Epoch 11/25\n",
+      "75/75 [==============================] - 297s 4s/step - loss: 0.7658 - acc: 0.6629 - val_loss: 0.8020 - val_acc: 0.6180\n",
+      "Epoch 12/25\n",
+      "75/75 [==============================] - 297s 4s/step - loss: 0.7535 - acc: 0.6800 - val_loss: 0.8360 - val_acc: 0.6268\n",
+      "Epoch 13/25\n",
+      "75/75 [==============================] - 302s 4s/step - loss: 0.7476 - acc: 0.6863 - val_loss: 0.7332 - val_acc: 0.6788\n",
+      "Epoch 14/25\n",
+      "75/75 [==============================] - 305s 4s/step - loss: 0.7381 - acc: 0.6950 - val_loss: 0.8014 - val_acc: 0.6690\n",
+      "Epoch 15/25\n",
+      "75/75 [==============================] - 311s 4s/step - loss: 0.7104 - acc: 0.6925 - val_loss: 0.7607 - val_acc: 0.6796\n",
+      "Epoch 16/25\n",
+      "75/75 [==============================] - 300s 4s/step - loss: 0.6954 - acc: 0.7054 - val_loss: 0.7319 - val_acc: 0.6831\n",
+      "Epoch 17/25\n",
+      "75/75 [==============================] - 301s 4s/step - loss: 0.6738 - acc: 0.7133 - val_loss: 0.6683 - val_acc: 0.7465\n",
+      "Epoch 18/25\n",
+      "75/75 [==============================] - 308s 4s/step - loss: 0.6721 - acc: 0.7267 - val_loss: 0.7178 - val_acc: 0.6725\n",
+      "Epoch 19/25\n",
+      "75/75 [==============================] - 308s 4s/step - loss: 0.6456 - acc: 0.7325 - val_loss: 0.6753 - val_acc: 0.7148\n",
+      "Epoch 20/25\n",
+      "75/75 [==============================] - 300s 4s/step - loss: 0.6222 - acc: 0.7396 - val_loss: 0.6589 - val_acc: 0.7271\n",
+      "Epoch 21/25\n",
+      "75/75 [==============================] - 298s 4s/step - loss: 0.6142 - acc: 0.7388 - val_loss: 0.8472 - val_acc: 0.6831\n",
+      "Epoch 22/25\n",
+      "75/75 [==============================] - 299s 4s/step - loss: 0.6124 - acc: 0.7500 - val_loss: 0.6924 - val_acc: 0.7095\n",
+      "Epoch 23/25\n",
+      "75/75 [==============================] - 297s 4s/step - loss: 0.5993 - acc: 0.7533 - val_loss: 0.6582 - val_acc: 0.7060\n",
+      "Epoch 24/25\n",
+      "75/75 [==============================] - 296s 4s/step - loss: 0.5958 - acc: 0.7525 - val_loss: 0.6825 - val_acc: 0.7148\n",
+      "Epoch 25/25\n",
+      "75/75 [==============================] - 297s 4s/step - loss: 0.5806 - acc: 0.7542 - val_loss: 0.7909 - val_acc: 0.6479\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x227a8ef00f0>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model = Sequential()\n",
     "model.add(Conv2D(32, (3, 3), padding='same',input_shape=train_generator.image_shape,activation='relu'))\n",
@@ -196,21 +321,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'model' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-59f4d069d4c5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mconfusion_matrix\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mY_pred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict_generator\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalidation_generator\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalidation_generator\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclasses\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m//\u001b[0m\u001b[0mvalidation_generator\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0my_pred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0margmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mY_pred\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mconfusion_matrix\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mconfusion_matrix\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalidation_generator\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclasses\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'model' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.metrics import confusion_matrix \n",
     "Y_pred = model.predict_generator(validation_generator,len(validation_generator.classes)//validation_generator.batch_size+1)\n",
